--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
       <meta http-equiv='X-UA-Compatible' content='IE=edge'>
       <title>Naija Win Win</title>
       <meta name='viewport' content='width=device-width, initial-scale=1'>
+      <link rel="stylesheet" type='text/css' href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" type='text/css' href="assets/css/themeb.min.css">
       <link rel="stylesheet" type='text/css' href="assets/css/themet.min.css">
       <link rel="stylesheet" type="text/css" href="assets/css/slick.css"/>
@@ -12,24 +13,21 @@
       <link rel='stylesheet' type='text/css' href="assets/css/main.css">
   </head>
    <body class="tracking-wider tracking-normal">
-      <header class="w-full z-10 top-0 bg-primary pt-1">
+      <header class="w-full z-10 top-0 bg-primary pt-1 sticky">
          <nav class="navbar container home-menu navbar-expand-lg"> 
-            <a href="/" class="navbar-brand r-mauto" href="#" data-abc="true">
+            <a href="/home.html" class="navbar-brand r-mauto" href="#" data-abc="true">
                <img style="width: 120px;" class="img-logo-mobile" src="assets/img/logo-white.png" /> 
             </a> 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                <ul class="navbar-nav ml-auto">
-                 <li class="nav-item text-gray-100 active">
+                 <li class="nav-item text-gray-100">
                    <a class="nav-link" href="about.html">ABOUT</a>
                  </li>
                  <li class="nav-item text-gray-100">
-                   <a class="nav-link" href="merchants.html">MERCHANTS</a>
+                   <a class="nav-link" href="home.html#merchants-section">MERCHANTS</a>
                  </li>
                  <li class="nav-item text-gray-100">
-                  <a class="nav-link" href="banks.html">BANKS</a>
-                </li>
-                <li class="nav-item text-gray-100">
-                  <a class="nav-link" href="terms.html">T&C's</a>
+                  <a class="nav-link" href="home.html#banks-section">BANKS</a>
                 </li>
                 <li class="nav-item text-gray-100">
                   <a class="nav-link" href="reports.html">REPORT</a>
@@ -37,7 +35,7 @@
                </ul>
                <span class="navbar-text btn-menu">
                   <ul class="navbar-nav mr-auto">
-                     <li class="nav-item text-gray-100 active">  <button onclick="location.href='/category-hotodds.html'" class="-mt-2 d-none d-md-block bg-secondary hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-3 border border-primary rounded">
+                     <li class="nav-item text-gray-100 active">  <button onclick="location.href='/category-hotodds.html'" class="-mt-2 d-none d-md-block bg-secondary-h hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-3 border border-primary rounded">
                         SIGN UP
                       </button></li>
                       <li class="nav-item text-gray-100 active">  <button onclick="location.href='/category-hotodds.html'" class="-mt-2 d-none d-md-block bg-gray-100 hover:bg-gray-200 focus:outline-none text-primary font-semibold p-y-1-5 ft-15 px-3 border border-primary rounded">
@@ -47,24 +45,24 @@
                 </span>
              </div>
 
-             <button class="navbar-toggler bg-secondary items-center px-3 py-2 ml-10 rounded text-gray-500 border-gray-600 hover:text-gray-900 hover:border-purple-500 appearance-none focus:outline-none" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">  <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+             <button class="navbar-toggler bg-secondary-h items-center px-3 py-2 ml-10 rounded text-gray-500 border-gray-600 hover:text-gray-900 hover:border-purple-500 appearance-none focus:outline-none" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">  <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                <title>Menu</title>
                <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/>
             </svg></button>  
          </nav>
      
          </header>
-         <hr class="bg-secondary"/>
+         <hr class="bg-secondary-h"/>
 <div class="container-fluid p-0">
    <div class="bg-home-banner">
       <div class="container">
          <div class="row vh-100">
  <div class="col-12 my-auto">
-             <h2 class="text-white text-5xl font-w-700">UP TO 100% CASH BACK</h2>
-         <h1 class="text-secondary text-66xl font-w-800">WIN OR LOSE</h1>
+             <h2 style="letter-spacing: -4px;" class="text-white text-65xl font-norwester">UP TO 100% CASH BACK</h2>
+         <h1 style="letter-spacing: -4px;" class="text-secondary-h text-9xl font-norwester">WIN OR LOSE</h1>
          <p class="text-2xl text-white font-w-700">CONTROL YOUR ODDS,<br/>
             THIS IS HOW BETTING SHOULD BE DONE</p>
-            <button onclick="location.href='/category-hotodds.html'" class="mt-4 d-none d-md-block bg-secondary hover:bg-gray-200 focus:outline-none text-primary font-bold text-2xl px-5 py-2 border border-primary rounded">
+            <button onclick="location.href='/category-hotodds.html'" class="mt-4 d-none d-md-block bg-secondary-h hover:bg-gray-200 focus:outline-none text-primary font-bold text-2xl px-5 py-2 border border-primary rounded">
                JOIN WIN WIN
              </button>
          </div>
@@ -73,16 +71,16 @@
         
       </div>
    </div>
-   <hr class="bg-secondary"/>
+   <hr class="bg-secondary-h"/>
    <div class="row m-0">
-    <div class="col-lg-5 bg-primary p-3">
-         <h1 class="text-secondary mt-5 text-5xl font-w-800">YOUR BOOKINGS</h1>
-         <h1 class="text-white text-5xl font-w-800">YOUR RULES</h1>
+    <div class="col-lg-5 bg-primary px-4">
+         <h1 class="text-white mt-5 font-norwester text-6xl">YOUR BOOKINGS</h1>
+         <h1 class="text-secondary-h text-65xl font-norwester">YOUR RULES</h1>
          <p class="text-xl text-white font-w-700">THE RIGHT WAY TO PLAY, NEVER LOSE</p>
          <p class="font-w-100 text-white mt-4 w-75">
-            Open a WIN WIN account with  any of our <span class="text-secondary">partner banks </span> and stand a daily chance of winning up to 100% of your betting stake back with any <span class="text-secondary">merchant</span> of your choice.
+            Open a WIN WIN account with  any of our <span class="text-secondary-h">partner banks </span> and stand a daily chance of winning up to 100% of your betting stake back with any <span class="text-secondary-h">merchant</span> of your choice.
          </p>
-         <p class="font-w-100 text-secondary mt-4">
+         <p class="font-w-100 text-secondary-h mt-4">
             WHETHER YOU WIN OR LOSE.
          </p>
    </div>
@@ -91,21 +89,21 @@
    </div>   
    </div>
   <section class="bg-gameclass">
-<h2 class="text-center text-3xl font-w-800 py-5">FIVE TIERS TO SELECT FROM</h2>
+<h2 class="text-center text-4xl font-norwester font-w-800 py-5 text-primary">FIVE TIERS TO SELECT FROM</h2>
       <div class="row m-0 tierslide">
-         <div class="col-lg-3 col-md-4 col-6 col-sm-6 p-3">
+         <div class="col-lg-3 col-md-4 col-6 col-sm-6 p-4">
             <img  src="assets/img/silver@4x.jpg" />
          </div>
-         <div class="col-lg-3 col-md-4 col-6 col-sm-6 p-3">
+         <div class="col-lg-3 col-md-4 col-6 col-sm-6 p-4">
             <img  src="assets/img/gold@4x.jpg" />
          </div>
-         <div class="col-lg-3 col-md-4 col-6 col-sm-6 p-3">
+         <div class="col-lg-3 col-md-4 col-6 col-sm-6 p-4">
             <img  src="assets/img/Platinum@4x.jpg" />
          </div>
-         <div class="col-lg-3 col-md-4 col-6 col-sm-6 p-3">
+         <div class="col-lg-3 col-md-4 col-6 col-sm-6 p-4">
             <img  src="assets/img/bronze@4x.jpg" />
          </div>
-         <div class="col-lg-3 col-md-4 col-6 col-sm-6 p-3">
+         <div class="col-lg-3 col-md-4 col-6 col-sm-6 p-4">
             <img  src="assets/img/Basic_1@4x.jpg" />
          </div>
 
@@ -113,57 +111,94 @@
    </div>
   </section>
    
-  <section class="bg-primary">
-<div class="row m-0">
-   <div class="col-lg-12">
-      <h2 class="text-center text-secondary text-3xl font-w-800 py-5">CHOOSE YOUR BOOKMAKER</h2>
-   </div>
-</div>
+  <section id="merchants-section" class="bg-homegames">
+   <div class="row justify-center pt-5">
+      <div class="col-lg-6 py-5">
+         <h2 class="text-secondary-h text-5xl font-norwester">CHOOSE YOUR BOOKMAKER</h2>
+         <p style="font-size: .93rem;" class="font-w-700 text-white">SELECT YOUR FAVORITE BOOKMAKER AND START USING WIN WIN</p>
+         <p class="font-w-100 text-white">Want to become a merchant? <a class="text-secondary" href="merchants.html">CLICK HERE</a></p>
+      </div>
+   </div>    
 
 <div class="row m-0 justify-center">
-   <div class="col-lg-10">
+   <div class="col-lg-9">
       <div class="row">
      <div class="col-lg-4 mb-5 text-center">
-      <img class="m-auto radius-5" src="/assets/img/Artboard1.webp" />
+<a target="_blank" class="hover:shadow-lg" href="https://web.bet9ja.com/"><img class="m-auto radius-5" src="/assets/img/Artboard1.webp" /></a>
    </div>
    <div class="col-lg-4 mb-5 text-center">
-      <img class="m-auto radius-5" src="/assets/img/Artboard1copy.webp" />
+      <a target="_blank" class="hover:shadow-lg" href="https://www.merrybet.com/"><img class="m-auto radius-5" src="/assets/img/Artboard1copy.webp" /></a>
    </div>
    <div class="col-lg-4 mb-5 text-center">
-      <img class="m-auto radius-5" src="/assets/img/Artboard2.webp" />
+      <a target="_blank" class="hover:shadow-lg" href="https://1xbet.ng/en/"><img class="m-auto radius-5" src="/assets/img/Artboard2.webp" /></a>
    </div>    
    <div class="col-lg-4 mb-5 text-center">
-      <img class="m-auto radius-5" src="/assets/img/Artboard4.webp" />
+      <a target="_blank" class="hover:shadow-lg" href="https://www.surebet247.com/sports/#/"><img class="m-auto radius-5" src="/assets/img/Artboard4.webp" /></a>
    </div>       
    <div class="col-lg-4 mb-5 text-center">
-      <img class="m-auto radius-5" src="/assets/img/Artboard5.webp" />
+      <a target="_blank" class="hover:shadow-lg" href="https://www.betway.com.ng/"><img class="m-auto radius-5" src="/assets/img/Artboard5.webp" /></a>
    </div>   
    <div class="col-lg-4 mb-5 text-center">
-      <img class="m-auto radius-5" src="/assets/img/Artboard6.webp" />
+      <a target="_blank" class="hover:shadow-lg" href="https://www.nairabet.com/"><img class="m-auto radius-5" src="/assets/img/Artboard6.webp" /></a>
    </div>   
    <div class="col-lg-4 mb-5 text-center">
-      <img class="m-auto radius-5" src="/assets/img/Artboard7.webp" />
+      <a target="_blank" class="hover:shadow-lg" href="https://babaijebu.ng/en/lottery-results"><img class="m-auto radius-5" src="/assets/img/Artboard7.webp" /></a>
    </div>   
    <div class="col-lg-4 mb-5 text-center">
-      <img class="m-auto mb-5 radius-5" src="/assets/img/Artboard8.webp" />
+      <a target="_blank" class="hover:shadow-lg" href="https://www.winnersgoldenbet.com/"><img class="m-auto radius-5" src="/assets/img/Artboard8.webp" /></a>
    </div>   
    <div class="col-lg-4 mb-5 text-center">
-      <img class="m-auto radius-5" src="/assets/img/Artboard9.webp" />
+      <a target="_blank" class="hover:shadow-lg" href="https://www.bet365.com/#/HO/"><img class="m-auto radius-5" src="/assets/img/Artboard9.webp" /></a>
    </div>   
    <div class="col-lg-4 mb-5 text-center">
-      <img class="m-auto radius-5" src="/assets/img/Artboard10.webp" />
+      <a target="_blank" class="hover:shadow-lg" href="https://www.1960bet.com/sport.jsp"><img class="m-auto radius-5" src="/assets/img/Artboard10.webp" /></a>
    </div>   
    <div class="col-lg-4 mb-5 text-center">
-      <img class="m-auto radius-5" src="/assets/img/Artboard11.webp" />
+      <a target="_blank" class="hover:shadow-lg" href="https://www.betking.com/"><img class="m-auto radius-5" src="/assets/img/Artboard11.webp" /></a>
    </div>   
    <div class="col-lg-4 mb-5 text-center">
-      <img class="m-auto radius-5" src="/assets/img/Artboard12.webp" />
+      <a target="_blank" class="hover:shadow-lg" href="https://www.lionsbet.com/index2.html"><img class="m-auto radius-5" src="/assets/img/Artboard12.webp" /></a>
    </div>   
       </div>
    </div>
 
 </div>
   </section>
+  <hr class="bg-secondary-h" />
+  <section id="banks-section" class="bg-homegames">
+   <div class="row justify-center pt-5">
+      <div class="col-lg-6 text-center py-5">
+         <h2 class="text-center text-secondary-h text-5xl font-norwester">WIN WIN BANKS</h2>
+         <p style="font-size: .93rem;" class="font-w-700 text-white">WIN WIN IS AVAILABLE FOR CUSTOMERS OF THESE BANKS</p>
+      </div>
+   </div>
+   
+   <div class="row m-0 justify-center">
+      <div class="col-lg-9">
+         <div class="row">
+        <div class="col-lg-4 mb-5 text-center">
+      <img class="m-auto radius-5" src="/assets/img/Artboardbank1.webp" />
+      </div>
+      <div class="col-lg-4 mb-5 text-center">   
+         <img class="m-auto radius-5" src="/assets/img/Artboardbank2.webp" />
+      </div>
+      <div class="col-lg-4 mb-5 text-center">
+         <img class="m-auto radius-5" src="/assets/img/Artboardbank3.webp" />
+      </div>    
+      <div class="col-lg-4 mb-5 text-center">
+         <img class="m-auto radius-5" src="/assets/img/Artboardbank4.webp" />
+      </div>       
+      <div class="col-lg-4 mb-5 text-center">
+         <img class="m-auto radius-5" src="/assets/img/Artboardbank5.webp" />
+      </div>   
+      <div class="col-lg-4 mb-5 text-center">
+      <img class="m-auto radius-5" src="/assets/img/Artboardbank6.webp" />
+      </div>    
+         </div>
+      </div>
+   
+   </div>
+     </section>
 
 </div>
 
@@ -176,10 +211,9 @@
                <a class="text-orange-600 no-underline hover:no-underline font-bold mb-5 text-2xl lg:text-4xl" href="#">
                   <img style="width: 150px;" src="assets/img/logo-white.png" /> 
                </a>
-              <div class="mx-auto mt-5">
+              <div style="width: 80%;" class="mx-auto mt-4">
                <i class="fa fa-facebook text-white fa-2x ml-3 mr-2"></i>
                <i class="fa fa-instagram text-white fa-2x ml-3 mr-2"></i>
-               <i class="fa fa-twitter text-white fa-2x ml-3 mr-2"></i>
               </div>
              </div>
    
@@ -193,7 +227,7 @@
                    <a href="#" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">Help</a>
                  </li>
                  <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                   <a href="#" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">Support</a>
+                   <a href="reports.html" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">Support</a>
                  </li>
                </ul>
              </div>
@@ -201,7 +235,7 @@
                <p class="uppercase font-extrabold text-gray-100 md:mb-6">Legal</p>
                <ul class="list-reset mb-6">
                  <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                   <a href="#" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">Terms</a>
+                   <a href="terms.html" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">Terms</a>
                  </li>
                  <li class="mt-2 inline-block mr-2 md:block md:mr-0">
                    <a href="#" class="font-light no-underline text-gray-400 hover:text-orange-500 text-sm">Privacy</a>
