--- a/home.html
+++ b/home.html
@@ -74,7 +74,7 @@
    <hr class="bg-secondary-h"/>
    <div class="row m-0">
     <div class="col-lg-5 bg-primary px-4">
-         <h1 class="text-white mt-5 font-norwester text-6xl">YOUR BOOKINGS</h1>
+         <h1 class="text-white mt-5 font-norwester text-65xl">YOUR BOOKI</h1>
          <h1 class="text-secondary-h text-65xl font-norwester">YOUR RULES</h1>
          <p class="text-xl text-white font-w-700">THE RIGHT WAY TO PLAY, NEVER LOSE</p>
          <p class="font-w-100 text-white mt-4 w-75">
