checking to pull

--- a/about.html
+++ b/about.html
@@ -18,7 +18,11 @@
             <a href="/home.html" class="navbar-brand r-mauto" href="#" data-abc="true">
                <img style="width: 120px;" class="img-logo-mobile" src="assets/img/logo-white.png" /> 
             </a> 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <button class="navbar-toggler bg-secondary-h items-center px-3 py-2 ml-10 rounded text-gray-500 border-gray-600 hover:text-gray-900 hover:border-purple-500 appearance-none focus:outline-none" type="button" data-toggle="collapse" data-target="#navbarhomemenu" aria-controls="navbarhomemenu" aria-expanded="false" aria-label="Toggle navigation">  <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+               <title>Menu</title>
+               <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/>
+            </svg></button>  
+            <div class="collapse navbar-collapse" id="navbarhomemenu">
                <ul class="navbar-nav ml-auto">
                  <li class="nav-item text-gray-100 active">
                    <a class="nav-link" href="about.html">ABOUT</a>
@@ -44,11 +48,6 @@
                      </ul>   
                 </span>
              </div>
-
-             <button class="navbar-toggler bg-secondary-h items-center px-3 py-2 ml-10 rounded text-gray-500 border-gray-600 hover:text-gray-900 hover:border-purple-500 appearance-none focus:outline-none" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">  <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-               <title>Menu</title>
-               <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/>
-            </svg></button>  
          </nav>
      
          </header>
@@ -59,7 +58,7 @@
          <div class="row justify-center vh-100">
  <div class="col-10 my-auto">
              <h2 class="text-white text-65xl font-norwester">EVEN BAD GAMES</h2>
-         <h1 style="font-size: 4.8rem;" class="text-secondary-h text-6xl font-norwester">HAVE GOOD ODDS</h1>
+         <h1 class="text-secondary-h text-6xl font-norwester">HAVE GOOD ODDS</h1>
          <p class="font-w-100 text-white mt-4 w-75">
             WIN WIN is a sports betting aggregator that gives you more than what you pay for on every bet you place.
          </p>
@@ -195,7 +194,7 @@
 </div>
 
 <hr class="bg-secondary" />
-<div class="bg-primary-dark">
+<div class="bg-primary-dark sec-winmore">
    <div class="container">
       <div class="row justify-center pt-5 pb-5">
 <div class="col-10 my-auto">
