--- a/banks.html
+++ b/banks.html
@@ -17,7 +17,11 @@
             <a href="/home.html" class="navbar-brand r-mauto" href="#" data-abc="true">
                <img style="width: 120px;" class="img-logo-mobile" src="assets/img/logo-white.png" /> 
             </a> 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <button class="navbar-toggler bg-secondary-h items-center px-3 py-2 ml-10 rounded text-gray-500 border-gray-600 hover:text-gray-900 hover:border-purple-500 appearance-none focus:outline-none" type="button" data-toggle="collapse" data-target="#navbarhomemenu" aria-controls="navbarhomemenu" aria-expanded="false" aria-label="Toggle navigation">  <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+              <title>Menu</title>
+              <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/>
+           </svg></button>  
+            <div class="collapse navbar-collapse" id="navbarhomemenu">
                <ul class="navbar-nav ml-auto">
                  <li class="nav-item text-gray-100">
                    <a class="nav-link" href="about.html">ABOUT</a>
@@ -46,11 +50,6 @@
                      </ul>   
                 </span>
              </div>
-
-             <button class="navbar-toggler bg-secondary items-center px-3 py-2 ml-10 rounded text-gray-500 border-gray-600 hover:text-gray-900 hover:border-purple-500 appearance-none focus:outline-none" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">  <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-               <title>Menu</title>
-               <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/>
-            </svg></button>  
          </nav>
      
          </header>
