--- a/home.html
+++ b/home.html
@@ -186,22 +186,35 @@
       <div class="col-lg-9">
          <div class="row">
         <div class="col-lg-4 col-md-3 mb-5 text-center">
-      <img class="m-auto radius-5" src="/assets/img/Artboardbank1.webp" />
+<a target="_blank" href="https://www.accessbankplc.com/">
+   <img class="m-auto radius-5" src="/assets/img/Artboardbank1.webp" />
+</a>
       </div>
       <div class="col-lg-4 col-md-3 mb-5 text-center">   
-         <img class="m-auto radius-5" src="/assets/img/Artboardbank2.webp" />
+
+         <a target="_blank" href="https://www.keystonebankng.com/">
+            <img class="m-auto radius-5" src="/assets/img/Artboardbank2.webp" />
+         </a>
       </div>
       <div class="col-lg-4 col-md-3 mb-5 text-center">
-         <img class="m-auto radius-5" src="/assets/img/Artboardbank3.webp" />
+         <a target="_blank" href="https://www.zenithbank.com/">
+            <img class="m-auto radius-5" src="/assets/img/Artboardbank3.webp" />
+         </a>
       </div>    
       <div class="col-lg-4 col-md-3 mb-5 text-center">
-         <img class="m-auto radius-5" src="/assets/img/Artboardbank4.webp" />
+         <a target="blank" href="https://www.gtbank.com/">
+            <img class="m-auto radius-5" src="/assets/img/Artboardbank4.webp" />
+         </a>
       </div>       
       <div class="col-lg-4 col-md-3 mb-5 text-center">
-         <img class="m-auto radius-5" src="/assets/img/Artboardbank5.webp" />
+         <a target="_blank" href="https://sterling.ng/">
+            <img class="m-auto radius-5" src="/assets/img/Artboardbank5.webp" />
+         </a>
       </div>   
       <div class="col-lg-4 col-md-3 mb-5 text-center">
-      <img class="m-auto radius-5" src="/assets/img/Artboardbank6.webp" />
+         <a target="_blank" href="https://www.ubagroup.com/">
+            <img class="m-auto radius-5" src="/assets/img/Artboardbank6.webp" />
+         </a>
       </div>    
          </div>
       </div>
