--- a/reports.html
+++ b/reports.html
@@ -61,7 +61,7 @@
  <div class="col-10">
    <h1 class="text-secondary mt-5 mb-3 text-4xl font-norwester">REPORT A PROBLEM
    </h1>
-   <p style="font-size: .93rem;" class="font-w-700 text-white mb-5">We love keeping your WIN WIN experience fun, fair and clear. Any problem? <br/>Fill in the form to Report to us and we shall get on it.
+   <p style="font-size: .93rem;" class="font-w-700 font-poppins text-white mb-5">We love keeping your WIN WIN experience fun, fair and clear. Any problem? <br/>Fill in the form to Report to us and we shall get on it.
       
       </p>
 <div class="row mb-5">
@@ -69,41 +69,42 @@
          <label class="block tracking-wide text-gray-300 font-w-100 text-sm mb-2" for="grid-first-name">
             First Name *
          </label>
-         <input class="appearance-none block w-full bg-gray-800 text-gray-300 font-w-100 border border-secondary py-2 px-4 leading-tight focus:outline-none hover:bg-transparent text-sm focus:bg-transparent focus:border-gray-500" id="grid-last-name" type="text">
+         <input class="appearance-none block w-full bg-inp-dark text-gray-300 font-w-100 border border-secondary py-2 px-4 leading-tight focus:outline-none hover:bg-transparent text-sm focus:bg-transparent focus:border-gray-500" id="grid-last-name" type="text">
    </div>
 
    <div class="col-lg-12 mb-3">
       <label class="block tracking-wide text-gray-300 font-w-100 text-sm mb-2" for="grid-first-name">
          Last Name *
       </label>
-      <input class="appearance-none block w-full bg-gray-800 text-gray-300 font-w-100 border border-secondary py-2 px-4 leading-tight focus:outline-none hover:bg-transparent text-sm focus:bg-transparent focus:border-gray-500" id="grid-last-name" type="text">
+      <input class="appearance-none block w-full bg-inp-dark text-gray-300 font-w-100 border border-secondary py-2 px-4 leading-tight focus:outline-none hover:bg-transparent text-sm focus:bg-transparent focus:border-gray-500" id="grid-last-name" type="text">
 </div>
 
 <div class="col-lg-12 mb-3">
    <label class="block tracking-wide text-gray-300 font-w-100 text-sm mb-2" for="grid-first-name">
      Email *
    </label>
-   <input class="appearance-none block w-full bg-gray-800 text-gray-300 font-w-100 border border-secondary py-2 px-4 leading-tight focus:outline-none hover:bg-transparent focus:bg-transparent text-sm focus:border-gray-500" id="grid-last-name" type="text">
+   <input class="appearance-none block w-full bg-inp-dark text-gray-300 font-w-100 border border-secondary py-2 px-4 leading-tight focus:outline-none hover:bg-transparent focus:bg-transparent text-sm focus:border-gray-500" id="grid-last-name" type="text">
 </div>
 
 <div class="col-lg-12 mb-3">
    <label class="block tracking-wide text-gray-300 font-w-100 text-sm mb-2" for="grid-first-name">
      Phone *
    </label>
-   <input class="appearance-none block w-full bg-gray-800 text-gray-300 font-w-100 border border-secondary py-2 px-4 leading-tight focus:outline-none hover:bg-transparent focus:bg-transparent text-sm focus:border-gray-500" id="grid-last-name" type="text">
+   <input class="appearance-none block w-full bg-inp-dark text-gray-300 font-w-100 border border-secondary py-2 px-4 leading-tight focus:outline-none hover:bg-transparent focus:bg-transparent text-sm focus:border-gray-500" id="grid-last-name" type="text">
 </div>
 
 <div class="col-lg-12 mb-3">
    <label class="block tracking-wide text-gray-300 font-w-100 text-sm mb-2" for="grid-first-name">
      Describe Problem *
    </label>
-   <textarea cols="4" rows="8" class="appearance-none block w-full bg-gray-800 text-gray-300 font-w-100 border border-secondary py-2 px-4 leading-tight focus:outline-none hover:bg-transparent focus:bg-transparent text-sm focus:border-gray-500" >
+   <textarea cols="4" rows="8" class="appearance-none block w-full bg-inp-dark text-gray-300 font-w-100 border border-secondary py-2 px-4 leading-tight focus:outline-none hover:bg-transparent focus:bg-transparent text-sm focus:border-gray-500" >
    </textarea>
 </div>
 
 <div class="col-lg-12 mb-3">
-   <button class=" bg-secondary mt-4 focus:outline-none text-primary font-semibold py-3  ft-15 px-5 border border-primary rounded">
-   SEND </button>
+   <button class="mt-4 font-poppins font-w-700 d-none d-md-block bg-secondary-h hover:border-btn hover:bg-primary hover:text-secondary focus:outline-none text-primary font-bold text-xl px-5 py-2 border border-primary rounded">
+    SEND
+  </button>
 </div>
 <div class="col-lg-12 py-3"></div>
 </div>   
