--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
       <link rel='stylesheet' type='text/css' href="assets/css/main.css">
   </head>
    <body class="tracking-wider tracking-normal">
-      <header class="w-full z-10 top-0 bg-primary pt-1 fixed bd-btm-secondary">
+      <header class="w-full z-10 top-0 bg-primary pt-1 sticky bd-btm-secondary">
          <nav class="navbar container home-menu navbar-expand-lg"> 
             <a href="/home.html" class="navbar-brand r-mauto" href="#" data-abc="true">
                <img style="width: 120px;" class="img-logo-mobile" src="assets/img/logo-white.png" /> 
