--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
       <meta http-equiv='X-UA-Compatible' content='IE=edge'>
       <title>Naija Win Win</title>
       <meta name='viewport' content='width=device-width, initial-scale=1'>
+      <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
       <link rel="stylesheet" type='text/css' href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" type='text/css' href="assets/css/themeb.min.css">
       <link rel="stylesheet" type='text/css' href="assets/css/themet.min.css">
