--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
 
     
 <footer class="bg-black">
-   <div class="container mx-auto mt-0">
+   <div class="container mx-auto">
      <div class="w-full flex flex-wrap md:flex-row pt-16">
        <div class="w-full lg:w-1/4 md:w-1/4 sm:w-1/2 mb-6 px-4">
          <a class="text-orange-600 no-underline hover:no-underline font-bold mb-5 text-2xl lg:text-4xl" href="#">
