--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@ lMno15X6w0f+2mU6L9Jx5R6p5vi/AAMAZ1i0E7oUJckAAAAASUVORK5CYII=" transform="matrix(
       </div>
     
       <footer class="bg-primary ">
-         <div class="container mx-auto mt-8">
+         <div class="container mx-auto">
            <div class="w-full flex flex-wrap md:flex-row pt-16">
              <div class="w-full lg:w-1/4 md:w-1/4 sm:w-1/2 mb-6 px-4">
                <a class="text-orange-600 no-underline hover:no-underline font-bold mb-5 text-2xl lg:text-4xl" href="#">
