--- a/home.html
+++ b/home.html
@@ -34,9 +34,6 @@
                  <li class="nav-item text-gray-100">
                   <a class="nav-link" href="home.html#banks-section">BANKS</a>
                 </li>
-                <li class="nav-item text-gray-100">
-                  <a class="nav-link" href="reports.html">REPORT</a>
-                </li>
                </ul>
                <span class="navbar-text btn-menu">
                   <ul class="navbar-nav mr-auto">
@@ -99,20 +96,20 @@
             <h2 class="text-center text-4xl font-norwester font-w-800 py-4 text-primary">FIVE TIERS TO SELECT FROM</h2>
          </div>
       </div>
-      <div class="row mb-5 m-0">
-         <div class="col p-4">
+      <div class="row justify-content-center mb-3 m-0">
+         <div class="col-6 col-lg-2 col-md-3 col-sm-4 col-xs-4 p-4">
             <img  src="assets/img/Basic_1@4x.jpg" />
          </div>
-         <div class="col p-4">
+         <div class="col-6 col-lg-2 col-md-3 col-sm-4 col-xs-4 p-4">
             <img  src="assets/img/bronze@4x.jpg" />
          </div>
-         <div class="col p-4">
+         <div class="col-6 col-lg-2 col-md-3 col-sm-4 col-xs-4 p-4">
             <img  src="assets/img/silver@4x.jpg" />
          </div>
-         <div class="col p-4">
+         <div class="col-6 col-lg-2 col-md-3 col-sm-4 col-xs-4 p-4">
             <img  src="assets/img/gold@4x.jpg" />
          </div>
-         <div class="col p-4">
+         <div class="col-6 col-lg-2 col-md-3 col-sm-4 col-xs-4 p-4">
             <img  src="assets/img/Platinum@4x.jpg" />
          </div>
       
@@ -134,40 +131,40 @@
 <div class="row m-0 justify-center">
    <div class="col-lg-9">
       <div class="row">
-     <div class="col-lg-4 col-md-4 mb-5 text-center">
+     <div class="col-lg-4 col-md-4 col-sm-6 col-6 mb-5 text-center">
 <a target="_blank" class="hover:shadow-lg" href="https://web.bet9ja.com/"><img class="m-auto radius-5" src="/assets/img/Artboard1.webp" /></a>
    </div>
-   <div class="col-lg-4 col-md-4 mb-5 text-center">
+   <div class="col-lg-4 col-md-4 col-sm-6 col-6 mb-5 text-center">
       <a target="_blank" class="hover:shadow-lg" href="https://www.merrybet.com/"><img class="m-auto radius-5" src="/assets/img/Artboard1copy.webp" /></a>
    </div>
-   <div class="col-lg-4 col-md-4 mb-5 text-center">
+   <div class="col-lg-4 col-md-4 col-sm-6 col-6 mb-5 text-center">
       <a target="_blank" class="hover:shadow-lg" href="https://1xbet.ng/en/"><img class="m-auto radius-5" src="/assets/img/Artboard2.webp" /></a>
    </div>    
-   <div class="col-lg-4 col-md-4 mb-5 text-center">
+   <div class="col-lg-4 col-md-4 col-sm-6 col-6 mb-5 text-center">
       <a target="_blank" class="hover:shadow-lg" href="https://www.surebet247.com/sports/#/"><img class="m-auto radius-5" src="/assets/img/Artboard4.webp" /></a>
    </div>       
-   <div class="col-lg-4 col-md-4 mb-5 text-center">
+   <div class="col-lg-4 col-md-4 col-sm-6 col-6 mb-5 text-center">
       <a target="_blank" class="hover:shadow-lg" href="https://www.betway.com.ng/"><img class="m-auto radius-5" src="/assets/img/Artboard5.webp" /></a>
    </div>   
-   <div class="col-lg-4 col-md-4 mb-5 text-center">
+   <div class="col-lg-4 col-md-4 col-sm-6 col-6 mb-5 text-center">
       <a target="_blank" class="hover:shadow-lg" href="https://www.nairabet.com/"><img class="m-auto radius-5" src="/assets/img/Artboard6.webp" /></a>
    </div>   
-   <div class="col-lg-4 col-md-4 mb-5 text-center">
+   <div class="col-lg-4 col-md-4 col-sm-6 col-6 mb-5 text-center">
       <a target="_blank" class="hover:shadow-lg" href="https://babaijebu.ng/en/lottery-results"><img class="m-auto radius-5" src="/assets/img/Artboard7.webp" /></a>
    </div>   
-   <div class="col-lg-4 col-md-4 mb-5 text-center">
+   <div class="col-lg-4 col-md-4 col-sm-6 col-6 mb-5 text-center">
       <a target="_blank" class="hover:shadow-lg" href="https://www.winnersgoldenbet.com/"><img class="m-auto radius-5" src="/assets/img/Artboard8.webp" /></a>
    </div>   
-   <div class="col-lg-4 col-md-4 mb-5 text-center">
+   <div class="col-lg-4 col-md-4 col-sm-6 col-6 mb-5 text-center">
       <a target="_blank" class="hover:shadow-lg" href="https://www.bet365.com/#/HO/"><img class="m-auto radius-5" src="/assets/img/Artboard9.webp" /></a>
    </div>   
-   <div class="col-lg-4 col-md-4 mb-5 text-center">
+   <div class="col-lg-4 col-md-4 col-sm-6 col-6 mb-5 text-center">
       <a target="_blank" class="hover:shadow-lg" href="https://www.1960bet.com/sport.jsp"><img class="m-auto radius-5" src="/assets/img/Artboard10.webp" /></a>
    </div>   
-   <div class="col-lg-4 col-md-4 mb-5 text-center">
+   <div class="col-lg-4 col-md-4 col-sm-6 col-6 mb-5 text-center">
       <a target="_blank" class="hover:shadow-lg" href="https://www.betking.com/"><img class="m-auto radius-5" src="/assets/img/Artboard11.webp" /></a>
    </div>   
-   <div class="col-lg-4 col-md-4 mb-5 text-center">
+   <div class="col-lg-4 col-md-4 col-sm-6 col-6 mb-5 text-center">
       <a target="_blank" class="hover:shadow-lg" href="https://www.lionsbet.com/index2.html"><img class="m-auto radius-5" src="/assets/img/Artboard12.webp" /></a>
    </div>   
       </div>
@@ -187,33 +184,33 @@
    <div class="row m-0 justify-center">
       <div class="col-lg-9">
          <div class="row">
-        <div class="col-lg-4 col-md-3 mb-5 text-center">
+        <div class="col-lg-4 col-md-4 col-sm-6 col-6 mb-5 text-center">
 <a target="_blank" href="https://www.accessbankplc.com/">
    <img class="m-auto radius-5" src="/assets/img/Artboardbank1.webp" />
 </a>
       </div>
-      <div class="col-lg-4 col-md-3 mb-5 text-center">   
+      <div class="col-lg-4 col-md-4 col-sm-6 col-6 mb-5 text-center">   
 
          <a target="_blank" href="https://www.keystonebankng.com/">
             <img class="m-auto radius-5" src="/assets/img/Artboardbank2.webp" />
          </a>
       </div>
-      <div class="col-lg-4 col-md-3 mb-5 text-center">
+      <div class="col-lg-4 col-md-4 col-sm-6 col-6 mb-5 text-center">
          <a target="_blank" href="https://www.zenithbank.com/">
             <img class="m-auto radius-5" src="/assets/img/Artboardbank3.webp" />
          </a>
       </div>    
-      <div class="col-lg-4 col-md-3 mb-5 text-center">
+      <div class="col-lg-4 col-md-4 col-sm-6 col-6 mb-5 text-center">
          <a target="blank" href="https://www.gtbank.com/">
             <img class="m-auto radius-5" src="/assets/img/Artboardbank4.webp" />
          </a>
       </div>       
-      <div class="col-lg-4 col-md-3 mb-5 text-center">
+      <div class="col-lg-4 col-md-4 col-sm-6 col-6 mb-5 text-center">
          <a target="_blank" href="https://sterling.ng/">
             <img class="m-auto radius-5" src="/assets/img/Artboardbank5.webp" />
          </a>
       </div>   
-      <div class="col-lg-4 col-md-3 mb-5 text-center">
+      <div class="col-lg-4 col-md-4 col-sm-6 col-6 mb-5 text-center">
          <a target="_blank" href="https://www.ubagroup.com/">
             <img class="m-auto radius-5" src="/assets/img/Artboardbank6.webp" />
          </a>
@@ -233,11 +230,12 @@
            <div class="w-full flex flex-wrap md:flex-row pt-16">
              <div class="w-full lg:w-1/4 md:w-1/4 sm:w-1/2 mb-6 px-4">
                <a class="text-orange-600 no-underline hover:no-underline font-bold mb-5 text-2xl lg:text-4xl" href="#">
-                  <img style="width: 150px;" src="assets/img/logo-white.png" /> 
+                  <img style="width: 120px;" src="assets/img/logo-white.png" /> 
                </a>
-              <div style="width: 80%;" class="mx-auto mt-4">
-               <i class="fa fa-facebook text-white fa-2x ml-3 mr-2"></i>
-               <i class="fa fa-instagram text-white fa-2x ml-3 mr-2"></i>
+              <div style="width: 80%;" class="mt-4">
+               <i class="fa fa-twitter text-white  ml-3 mr-2"></i>
+               <i class="fa fa-facebook text-white  ml-3 mr-2"></i>
+               <i class="fa fa-instagram text-white  ml-3 mr-2"></i>
               </div>
              </div>
    
