--- a/terms.html
+++ b/terms.html
@@ -240,15 +240,16 @@
 
       
 <footer class="bg-black">
-  <div class="container mx-auto">
+  <div class="container mx-auto mt-0">
     <div class="w-full flex flex-wrap md:flex-row pt-16">
       <div class="w-full lg:w-1/4 md:w-1/4 sm:w-1/2 mb-6 px-4">
         <a class="text-orange-600 no-underline hover:no-underline font-bold mb-5 text-2xl lg:text-4xl" href="#">
-           <img style="width: 150px;" src="assets/img/logo-white.png" /> 
+           <img style="width: 120px;" src="assets/img/logo-white.png" /> 
         </a>
-       <div style="width: 80%;" class="mx-auto mt-4">
-        <i class="fa fa-facebook text-white fa-2x ml-3 mr-2"></i>
-        <i class="fa fa-instagram text-white fa-2x ml-3 mr-2"></i>
+       <div style="width: 80%;" class="mt-4">
+        <i class="fa fa-twitter text-white  ml-3 mr-2"></i>
+        <i class="fa fa-facebook text-white  ml-3 mr-2"></i>
+        <i class="fa fa-instagram text-white  ml-3 mr-2"></i>
        </div>
       </div>
 
